# httplog

./: .gitignore  CMakeLists.txt  README.md
include/backend/: main.hpp
include/backend/parser/: LogsParser.hpp
include/frontend/: main.hpp
include/frontend/components/: MainComponent.hpp
src/: main.cpp
src/backend/: getFileFromArgv.cpp
src/backend/parser/: LogParser.cpp
src/frontend/: createEventLoop.cpp  main.cpp
src/frontend/components/: MainComponent.cpp
test/: server.sh
